# dms

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install_system_deps.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_installation.py
.claude/: settings.local.json
.kiro/specs/dms/: design.md  requirements.md  tasks.md
<MagicMock name='load().data_path.__truediv__()' id='5003627216'>/: chroma.sqlite3
<MagicMock name='load().data_path.__truediv__()' id='5502749392'>/: chroma.sqlite3
<MagicMock name='load().data_path.__truediv__()' id='5506025520'>/: chroma.sqlite3
<MagicMock name='load().data_path.__truediv__()' id='5856326192'>/: chroma.sqlite3
dms/: __init__.py  config.py  errors.py  logging_setup.py  models.py
dms/categorization/: __init__.py  engine.py
dms/cli/: __init__.py  main.py
dms/llm/: __init__.py  provider.py
dms/processing/: __init__.py  pdf_processor.py
dms/rag/: __init__.py  engine.py
dms/storage/: __init__.py  database.py  metadata_manager.py  vector_store.py
docs/: CLI_HELP.md  CONFIGURATION.md  TROUBLESHOOTING.md
tests/: __init__.py  conftest.py
tests/integration/: test_import_workflow.py
tests/unit/: test_categorization_engine.py  test_cli_main.py  test_cli_main.py.backup  test_config.py  test_database.py  test_errors.py  test_llm_provider.py  test_logging_setup.py  test_metadata_manager.py  test_models.py  test_pdf_processor.py  test_rag_engine.py  test_vector_store.py
